--- a/index.html
+++ b/index.html
@@ -23,36 +23,38 @@
   <body>
     <!--====== Header ======-->
     <header class="header-page">
-      <nav class="nav-page">
-        <a class="logo header-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-item-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-item-link" href="">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-item-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="nav-page">
+          <a class="logo header-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-item-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item-link" href="">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-item-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- ====== Hero ====== -->
     <main>
