--- a/index.html
+++ b/index.html
@@ -59,162 +59,175 @@
     <!-- ====== Hero ====== -->
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+
+          <div class="btn-cont-hero">
+            <button class="hero-btn" type="button">Order Service</button>
+          </div>
+        </div>
       </section>
       <section>
-        <h2 class="hero-desc">Advantages</h2>
-        <ul>
-          <li>
-            <h3 class="title-desc">Strategy</h3>
-            <p class="text-desc">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-desc">Punctuality</h3>
-            <p class="text-desc">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-desc">Diligence</h3>
-            <p class="text-desc">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-desc">Technologies</h3>
-            <p class="text-desc">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="hero-desc visually-hidden">Advantages</h2>
+          <ul class="hero-list">
+            <li class="hero-list-item">
+              <h3 class="title-desc">Strategy</h3>
+              <p class="text-desc">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="hero-list-item">
+              <h3 class="title-desc">Punctuality</h3>
+              <p class="text-desc">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="hero-list-item">
+              <h3 class="title-desc">Diligence</h3>
+              <p class="text-desc">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="hero-list-item">
+              <h3 class="title-desc">Technologies</h3>
+              <p class="text-desc">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-hero">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="section-list">
-          <li class="section-item">
-            <img
-              src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-desc">Mark Guerrero</h3>
-            <p class="text-desc">Product Designer</p>
-          </li>
-          <li class="section-item">
-            <img
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-desc">Tom Ford</h3>
-            <p class="text-desc">Frontend Developer</p>
-          </li>
-          <li class="section-item">
-            <img
-              src="./images/camila-garcia.jpg"
-              alt="Camila Garcia avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-desc">Camila Garcia</h3>
-            <p class="text-desc">Marketing</p>
-          </li>
-          <li class="section-item">
-            <img
-              src="./images/daniel-wilson.jpg"
-              alt="Daniel Wilson avatar"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-desc">Daniel Wilson</h3>
-            <p class="text-desc">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="section-list">
+            <li class="section-item">
+              <img
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero avatar"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-desc">Mark Guerrero</h3>
+              <p class="text-desc">Product Designer</p>
+            </li>
+            <li class="section-item">
+              <img
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford avatar"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-desc">Tom Ford</h3>
+              <p class="text-desc">Frontend Developer</p>
+            </li>
+            <li class="section-item">
+              <img
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia avatar"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-desc">Camila Garcia</h3>
+              <p class="text-desc">Marketing</p>
+            </li>
+            <li class="section-item">
+              <img
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson avatar"
+                width="264"
+                height="260"
+              />
+              <h3 class="title-desc">Daniel Wilson</h3>
+              <p class="text-desc">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/banking-app.jpg"
-              alt="Banking App image"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-desc">Banking App</h3>
-            <p class="text-desc">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="Cashless Payment image"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-desc">Cashless Payment</h3>
-            <p class="text-desc">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/meditation-app.jpg"
-              alt="Meditation App image"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-desc">Meditation App</h3>
-            <p class="text-desc">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/taxi-service.jpg"
-              alt="Taxi Service image"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-desc">Taxi Service</h3>
-            <p class="text-desc">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/screen-illustrations.jpg"
-              alt="Screen Illustrations image"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-desc">Screen Illustrations</h3>
-            <p class="text-desc">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/online-courses.jpg"
-              alt="Online Courses image"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-desc">Online Courses</h3>
-            <p class="text-desc">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/banking-app.jpg"
+                alt="Banking App image"
+                width="360"
+                height="300"
+              />
+              <h3 class="title-desc">Banking App</h3>
+              <p class="text-desc">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment image"
+                width="360"
+                height="300"
+              />
+              <h3 class="title-desc">Cashless Payment</h3>
+              <p class="text-desc">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/meditation-app.jpg"
+                alt="Meditation App image"
+                width="360"
+                height="300"
+              />
+              <h3 class="title-desc">Meditation App</h3>
+              <p class="text-desc">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service image"
+                width="360"
+                height="300"
+              />
+              <h3 class="title-desc">Taxi Service</h3>
+              <p class="text-desc">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="Screen Illustrations image"
+                width="360"
+                height="300"
+              />
+              <h3 class="title-desc">Screen Illustrations</h3>
+              <p class="text-desc">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/online-courses.jpg"
+                alt="Online Courses image"
+                width="360"
+                height="300"
+              />
+              <h3 class="title-desc">Online Courses</h3>
+              <p class="text-desc">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- ======Footer===== -->
     <footer class="page-footer">
-      <a class="logo footer-logo" href="./index.html"
-        >Web<span class="logo-part">Studio</span></a
-      >
-      <p class="footer-title">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo footer-logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
+        <p class="footer-title">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
