--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-
           <div class="btn-cont-hero">
             <button class="hero-btn" type="button">Order Service</button>
           </div>
         </div>
       </section>
-      <section>
+      <section class="section-serv">
         <div class="container">
           <h2 class="hero-desc visually-hidden">Advantages</h2>
           <ul class="hero-list">
@@ -103,115 +102,146 @@
         </div>
       </section>
       <section class="section-hero">
-        <div class="container">
+         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="section-list">
+              <li class="section-item">
+                <img
+                  class="foto"
+                  src="./images/mark-guerrero.jpg"
+                  alt="Mark Guerrero avatar"
+                  width="264"
+                  height="260"
+                />
+                <div class="foto-desc">
+                  <h3 class="title-desc">Mark Guerrero</h3>
+                  <p class="text-desc">Product Designer</p>
+                </div>
+              </li>
             <li class="section-item">
               <img
-                src="./images/mark-guerrero.jpg"
-                alt="Mark Guerrero avatar"
-                width="264"
-                height="260"
-              />
-              <h3 class="title-desc">Mark Guerrero</h3>
-              <p class="text-desc">Product Designer</p>
-            </li>
-            <li class="section-item">
-              <img
+                class="foto"
                 src="./images/tom-ford.jpg"
                 alt="Tom Ford avatar"
                 width="264"
                 height="260"
               />
-              <h3 class="title-desc">Tom Ford</h3>
-              <p class="text-desc">Frontend Developer</p>
+              <div class="foto-desc">
+                <h3 class="title-desc">Tom Ford</h3>
+                <p class="text-desc">Frontend Developer</p>
+              </div>
             </li>
             <li class="section-item">
               <img
+                class="foto"
                 src="./images/camila-garcia.jpg"
                 alt="Camila Garcia avatar"
                 width="264"
                 height="260"
               />
-              <h3 class="title-desc">Camila Garcia</h3>
-              <p class="text-desc">Marketing</p>
+              <div class="foto-desc">
+                <h3 class="title-desc">Camila Garcia</h3>
+                <p class="text-desc">Marketing</p>
+              </div>
             </li>
             <li class="section-item">
               <img
+                class="foto"
                 src="./images/daniel-wilson.jpg"
                 alt="Daniel Wilson avatar"
                 width="264"
                 height="260"
               />
-              <h3 class="title-desc">Daniel Wilson</h3>
-              <p class="text-desc">UI Designer</p>
+              <div class="foto-desc">
+                <h3 class="title-desc">Daniel Wilson</h3>
+                <p class="text-desc">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
-      <section>
+      <section class="section-tech">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
-          <ul>
-            <li>
+          <div class="container-sect">
+          <ul class="tech-desc-title">
+            <li class="tech-desc">
               <img
+                class="tech-foto"
                 src="./images/banking-app.jpg"
                 alt="Banking App image"
                 width="360"
                 height="300"
               />
-              <h3 class="title-desc">Banking App</h3>
-              <p class="text-desc">App</p>
+              <div class="section-tech-cont">
+                <h3 class="title-desc">Banking App</h3>
+                <p class="text-desc">App</p>
+              </div>
             </li>
-            <li>
+            <li class="tech-desc">
               <img
+                class="tech-foto"
                 src="./images/cashless-payment.jpg"
                 alt="Cashless Payment image"
                 width="360"
                 height="300"
               />
-              <h3 class="title-desc">Cashless Payment</h3>
-              <p class="text-desc">Marketing</p>
+              <div class="section-tech-cont">
+                <h3 class="title-desc">Cashless Payment</h3>
+                <p class="text-desc">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="tech-desc">
               <img
+                class="tech-foto"
                 src="./images/meditation-app.jpg"
                 alt="Meditation App image"
                 width="360"
                 height="300"
               />
-              <h3 class="title-desc">Meditation App</h3>
-              <p class="text-desc">App</p>
+              <div class="section-tech-cont">
+                <h3 class="title-desc">Meditation App</h3>
+                <p class="text-desc">App</p>
+              </div>
             </li>
-            <li>
+            <li class="tech-desc">
               <img
+                class="tech-foto"
                 src="./images/taxi-service.jpg"
                 alt="Taxi Service image"
                 width="360"
                 height="300"
               />
-              <h3 class="title-desc">Taxi Service</h3>
-              <p class="text-desc">Marketing</p>
+              <div class="section-tech-cont">
+                <h3 class="title-desc">Taxi Service</h3>
+                <p class="text-desc">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="tech-desc">
               <img
+                class="tech-foto"
                 src="./images/screen-illustrations.jpg"
                 alt="Screen Illustrations image"
                 width="360"
                 height="300"
               />
-              <h3 class="title-desc">Screen Illustrations</h3>
-              <p class="text-desc">Design</p>
+              <div class="section-tech-cont">
+                <h3 class="title-desc">Screen Illustrations</h3>
+                <p class="text-desc">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="tech-desc">
               <img
+                class="tech-foto"
                 src="./images/online-courses.jpg"
                 alt="Online Courses image"
                 width="360"
                 height="300"
               />
-              <h3 class="title-desc">Online Courses</h3>
-              <p class="text-desc">Marketing</p>
+              <div class="section-tech-cont">
+                <h3 class="title-desc">Online Courses</h3>
+                <p class="text-desc">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
