--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- ====== Hero ====== -->
     <main>
       <section class="hero">
-        <div class="container">
+        <div class="container hero-cont">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <div class="btn-cont-hero">
             <button class="hero-btn" type="button">Order Service</button>
@@ -67,7 +67,7 @@
         </div>
       </section>
       <section class="section-serv">
-        <div class="container">
+        <div class="container section-cont">
           <h2 class="hero-desc visually-hidden">Advantages</h2>
           <ul class="hero-list">
             <li class="hero-list-item">
@@ -102,25 +102,23 @@
         </div>
       </section>
       <section class="section-hero">
-         <div class="container">
+        <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="section-list">
-              <li class="section-item">
-                <img
-                  class="foto"
-                  src="./images/mark-guerrero.jpg"
-                  alt="Mark Guerrero avatar"
-                  width="264"
-                  height="260"
-                />
-                <div class="foto-desc">
-                  <h3 class="title-desc">Mark Guerrero</h3>
-                  <p class="text-desc">Product Designer</p>
-                </div>
-              </li>
             <li class="section-item">
               <img
-                class="foto"
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero avatar"
+                width="264"
+                height="260"
+              />
+              <div class="foto-desc">
+                <h3 class="title-desc">Mark Guerrero</h3>
+                <p class="text-desc">Product Designer</p>
+              </div>
+            </li>
+            <li class="section-item">
+              <img
                 src="./images/tom-ford.jpg"
                 alt="Tom Ford avatar"
                 width="264"
@@ -133,7 +131,6 @@
             </li>
             <li class="section-item">
               <img
-                class="foto"
                 src="./images/camila-garcia.jpg"
                 alt="Camila Garcia avatar"
                 width="264"
@@ -146,7 +143,6 @@
             </li>
             <li class="section-item">
               <img
-                class="foto"
                 src="./images/daniel-wilson.jpg"
                 alt="Daniel Wilson avatar"
                 width="264"
@@ -161,9 +157,8 @@
         </div>
       </section>
       <section class="section-tech">
-        <div class="container">
+        <div class="section-tech-cont">
           <h2 class="section-title">Our Portfolio</h2>
-          <div class="container-sect">
           <ul class="tech-desc-title">
             <li class="tech-desc">
               <img
