--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
       <section class="hero">
         <div class="container hero-cont">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <div class="btn-cont-hero">
-            <button class="hero-btn" type="button">Order Service</button>
-          </div>
+          <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
       <section class="section-serv">
@@ -157,7 +155,7 @@
         </div>
       </section>
       <section class="section-tech">
-        <div class="section-tech-cont">
+        <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="tech-desc-title">
             <li class="tech-desc">
